--- a/app/src/main.css
+++ b/app/src/main.css
@@ -16274,7 +16274,7 @@ body .product-popup {
   font-family: "Font Awesome 5 Free";
   font-size: 1rem;
   color: inherit;
-  content: "";
+  content: "\f105";
 }
 
 /* Mega Menu */
